--- a/index.html
+++ b/index.html
@@ -235,27 +235,24 @@
                     <div class="download-info">Versione 2.0.0 • ~3.9 MB • Scade 30/12/2025</div>
                 </div>
 
-                <div class="download-card">
+                <div class="download-card disabled">
                     <div class="download-icon">
                         <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
                             <rect width="48" height="48" rx="12" fill="#f3f4f6"/>
-                            <path d="M24 14C28.4183 14 32 17.5817 32 22C32 26.4183 28.4183 30 24 30C19.5817 30 16 26.4183 16 22C16 17.5817 19.5817 14 24 14ZM24 32C27.3137 32 30 34.6863 30 38H18C18 34.6863 20.6863 32 24 32Z" fill="#6b7280"/>
+                            <path d="M24 14C28.4183 14 32 17.5817 32 22C32 26.4183 28.4183 30 24 30C19.5817 30 16 26.4183 16 22C16 17.5817 19.5817 14 24 14ZM24 32C27.3137 32 30 34.6863 30 38H18C18 34.6863 20.6863 32 24 32Z" fill="#9ca3af"/>
                         </svg>
                     </div>
                     <h3 class="download-title">Intel Mac</h3>
-                    <p class="download-subtitle">Per Mac Intel (x86_64)</p>
+                    <p class="download-subtitle">Coming Soon</p>
                     <div class="download-features">
-                        <div class="download-feature">✓ Buone prestazioni 5-8× real-time</div>
-                        <div class="download-feature">✓ Ottimizzato AVX2 + FMA</div>
-                        <div class="download-feature">✓ Metal GPU Intel Iris / AMD Radeon</div>
+                        <div class="download-feature coming-soon">In sviluppo attivo</div>
+                        <div class="download-feature coming-soon">Ottimizzazione AVX2 + FMA</div>
+                        <div class="download-feature coming-soon">Metal GPU Intel Iris / AMD Radeon</div>
                     </div>
-                    <a href="#" class="btn btn-secondary btn-large" id="download-intel">
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M10 12.5L6.25 8.75L7.5 7.4375L9.375 9.3125V2.5H10.625V9.3125L12.5 7.4375L13.75 8.75L10 12.5ZM4.375 17.5C3.88542 17.5 3.46354 17.3255 3.10938 16.9766C2.75521 16.6276 2.57771 16.2083 2.57292 15.7188V12.8125H3.82292V15.7188C3.82292 15.9062 3.89583 16.0729 4.04167 16.2188C4.1875 16.3646 4.35417 16.4375 4.54167 16.4375H15.4583C15.6458 16.4375 15.8125 16.3646 15.9583 16.2188C16.1042 16.0729 16.1771 15.9062 16.1771 15.7188V12.8125H17.4271V15.7188C17.4271 16.2083 17.2526 16.6276 16.9036 16.9766C16.5547 17.3255 16.1354 17.5 15.6458 17.5H4.375Z" fill="currentColor"/>
-                        </svg>
-                        Scarica per Intel Mac
-                    </a>
-                    <div class="download-info">Versione 2.0.0 • Scade 30/12/2025</div>
+                    <button class="btn btn-disabled btn-large" disabled>
+                        In Arrivo
+                    </button>
+                    <div class="download-info">Disponibile presto</div>
                 </div>
 
                 <div class="download-card disabled">
