--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tells me More - Trascrizione Audio AI Ultra-Veloce</title>
+    <title>Tells me more - Trascrizione Audio AI Ultra-Veloce</title>
     <meta name="description" content="Trasforma ore di audio in testo accurato in pochi minuti. AI-powered, 100% offline, qualità professionale.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <span class="logo-icon">🎙️</span>
-                <span class="logo-text">Tells me More</span>
+                <span class="logo-text">Tells me more</span>
             </div>
             <nav class="nav">
                 <a href="#features" class="nav-link">Funzionalità</a>
@@ -328,8 +327,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="logo">
-                        <span class="logo-icon">🎙️</span>
-                        <span class="logo-text">Tells me More</span>
+                        <span class="logo-text">Tells me more</span>
                     </div>
                     <p class="footer-tagline">
                         Trascrizione audio AI ultra-veloce.<br>
