--- a/index.html
+++ b/index.html
@@ -351,10 +351,10 @@
             </div>
             <div class="footer-bottom">
                 <p class="footer-copyright">
-                    © 2024 Tells me More. Versione di prova gratuita valida fino al 30 Dicembre 2025.
+                    © 2024 Tells me More.
                 </p>
                 <p class="footer-tech">
-                    Realizzato con ❤️ da Alessandro Saladino
+                    Realizzato da <a href="https://www.linkedin.com/in/alessandrosaladino/">Alessandro Saladino</a>
                 </p>
             </div>
         </div>
