--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <path d="M10 12.5L6.25 8.75L7.5 7.4375L9.375 9.3125V2.5H10.625V9.3125L12.5 7.4375L13.75 8.75L10 12.5ZM4.375 17.5C3.88542 17.5 3.46354 17.3255 3.10938 16.9766C2.75521 16.6276 2.57771 16.2083 2.57292 15.7188V12.8125H3.82292V15.7188C3.82292 15.9062 3.89583 16.0729 4.04167 16.2188C4.1875 16.3646 4.35417 16.4375 4.54167 16.4375H15.4583C15.6458 16.4375 15.8125 16.3646 15.9583 16.2188C16.1042 16.0729 16.1771 15.9062 16.1771 15.7188V12.8125H17.4271V15.7188C17.4271 16.2083 17.2526 16.6276 16.9036 16.9766C16.5547 17.3255 16.1354 17.5 15.6458 17.5H4.375Z" fill="currentColor"/>
                         </svg>
                     </a>
-                    <a href="https://forms.gle/iDtmktnK3NeNqxVk6" class="btn btn-secondary">
+                    <a href="https://forms.gle/ijanAYVBAtUfEtF39" class="btn btn-secondary" target="_blank">
                         Partecipa al Sondaggio
                     </a>
                 </div>
@@ -305,7 +305,7 @@
                         La tua opinione è preziosa! Partecipa al nostro breve sondaggio
                         e contribuisci a rendere Tells me More ancora migliore.
                     </p>
-                    <a href="https://forms.gle/iDtmktnK3NeNqxVk6" class="btn btn-primary btn-large" id="survey-btn">
+                    <a href="https://forms.gle/ijanAYVBAtUfEtF39" class="btn btn-primary btn-large" id="survey-btn" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M10 2.5C5.85786 2.5 2.5 5.85786 2.5 10C2.5 14.1421 5.85786 17.5 10 17.5C14.1421 17.5 17.5 14.1421 17.5 10C17.5 5.85786 14.1421 2.5 10 2.5ZM9.375 6.875H10.625V10.625H9.375V6.875ZM10 13.75C9.65482 13.75 9.375 13.4702 9.375 13.125C9.375 12.7798 9.65482 12.5 10 12.5C10.3452 12.5 10.625 12.7798 10.625 13.125C10.625 13.4702 10.3452 13.75 10 13.75Z" fill="currentColor"/>
                         </svg>
