--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                         <div class="download-feature">✓ Native ARM64 architecture</div>
                         <div class="download-feature">✓ Optimized Metal GPU acceleration</div>
                     </div>
-                    <a href="#" class="btn btn-primary btn-large" id="download-m">
+                    <a href="https://github.com/Alekkk777/Tell_Me_More/releases/download/v1.0.0/Tells_me_More_2.0.0_Apple_Silicon.dmg" class="btn btn-primary btn-large" id="download-m">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M10 12.5L6.25 8.75L7.5 7.4375L9.375 9.3125V2.5H10.625V9.3125L12.5 7.4375L13.75 8.75L10 12.5ZM4.375 17.5C3.88542 17.5 3.46354 17.3255 3.10938 16.9766C2.75521 16.6276 2.57771 16.2083 2.57292 15.7188V12.8125H3.82292V15.7188C3.82292 15.9062 3.89583 16.0729 4.04167 16.2188C4.1875 16.3646 4.35417 16.4375 4.54167 16.4375H15.4583C15.6458 16.4375 15.8125 16.3646 15.9583 16.2188C16.1042 16.0729 16.1771 15.9062 16.1771 15.7188V12.8125H17.4271V15.7188C17.4271 16.2083 17.2526 16.6276 16.9036 16.9766C16.5547 17.3255 16.1354 17.5 15.6458 17.5H4.375Z" fill="currentColor"/>
                         </svg>
